Revision history for Perl extension XML-Minify

{{$NEXT}}

    - Documentation

1.01 2020-03-17T09:21:54Z

    - Documentation

1.00 2020-03-16T10:26:50Z

    - More modes : default, aggressive, destructive, insane
    - Disable some behaviour with keep_ options and/or remove_ options
    - Several tests (more than 100)
    - API almost stabilized

0.99 2020-02-21T18:38:29Z

    - Original version migrated to standalone xml-minifier.pl script