@@ -3,5 +3,6 @@ requires 'XML::LibXML';
 
 on 'test' => sub {
     requires 'Test::More', '0.98';
+    requires 'Test::Slow', '0.04';
 };
 
