@@ -1,6 +1,6 @@
-name = "XML-Minify"
+name = "XML-Minifier"
 badges = ["travis-ci.org", "github-actions/linux", "github-actions/macos", "github-actions/windows", "kritika"]
 module_maker="ModuleBuildTiny"
 static_install = "auto"
-#readme_from="lib/XML/Minify.pm"
+#readme_from="lib/XML/Minifier.pm"
 markdown_maker="Pod::Markdown::Github"
