@@ -1,8 +1,9 @@
-Revision history for Perl extension XML-Minify
+Revision history for Perl extension XML-Minifier
 
 {{$NEXT}}
 
-    - Documentation
+    - Rename XML::Minify to XML::Minifier
+    - Now use Test::Slow (during test only)
 
 1.01 2020-03-17T09:21:54Z
 
